// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rootReducer adds new transaction 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Bank": Account {
        "balance": "-3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-3.05",
        "name": "Bank",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Expenses": Account {
        "balance": "3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "3.05",
        "debits": "0",
        "name": "Expenses",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Bank",
          "Expenses",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1360281600,
          "isVerified": false,
          "tags": Array [],
          "title": "Bread",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "-3.05",
            "comment": "Comment",
            "currency": "$",
            "tag": "!",
            "tags": Array [],
          },
          Object {
            "account": "Expenses",
            "amount": "3.05",
            "tags": Array [
              "HOLIDAYS",
              "SUMMER",
            ],
          },
        ],
        "uuid": "uuid 0",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer adds new transaction with missing amount 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Bank": Account {
        "balance": "1000",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "1000",
        "debits": "0",
        "name": "Bank",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Cash": Account {
        "balance": "-3.14",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-3.14",
        "name": "Cash",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Daily expenses": Account {
        "balance": "3.14",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "3.14",
        "debits": "0",
        "name": "Daily expenses",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Job": Account {
        "balance": "-1000",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-1000",
        "name": "Job",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Bank",
          "Cash",
          "Daily expenses",
          "Job",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1360454400,
          "isVerified": false,
          "tags": Array [],
          "title": "Salary",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "1000",
            "currency": "€",
            "tags": Array [],
          },
          Object {
            "account": "Job",
            "amount": "-1000",
            "tags": Array [],
          },
        ],
        "uuid": "uuid 0",
      },
      "uuid 1": Object {
        "header": Object {
          "date": 1360540800,
          "isVerified": false,
          "tags": Array [],
          "title": "Bread",
        },
        "postings": Array [
          Object {
            "account": "Cash",
            "amount": "-3.14",
            "currency": "€",
            "tags": Array [],
          },
          Object {
            "account": "Daily expenses",
            "amount": "3.14",
            "tags": Array [],
          },
        ],
        "uuid": "uuid 1",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer adds new transactions with nested accounts 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Assets": Account {
        "balance": "0",
        "children": Array [
          "Assets:Bank",
        ],
        "childrenBalance": "142",
        "childrenCredits": "142",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "Assets",
        "nbChildrenTransactions": 2,
        "nbTransactions": 0,
        "parent": "ROOT",
      },
      "Assets:Bank": Account {
        "balance": "100",
        "children": Array [
          "Assets:Bank:Savings",
        ],
        "childrenBalance": "42",
        "childrenCredits": "42",
        "childrenDebits": "0",
        "credits": "100",
        "debits": "0",
        "name": "Assets:Bank",
        "nbChildrenTransactions": 1,
        "nbTransactions": 1,
        "parent": "Assets",
      },
      "Assets:Bank:Savings": Account {
        "balance": "42",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "42",
        "debits": "0",
        "name": "Assets:Bank:Savings",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "Assets:Bank",
      },
      "Income": Account {
        "balance": "0",
        "children": Array [
          "Income:Job",
        ],
        "childrenBalance": "-142",
        "childrenCredits": "0",
        "childrenDebits": "-142",
        "credits": "0",
        "debits": "0",
        "name": "Income",
        "nbChildrenTransactions": 1,
        "nbTransactions": 0,
        "parent": "ROOT",
      },
      "Income:Job": Account {
        "balance": "-142",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-142",
        "name": "Income:Job",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "Income",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Assets",
          "Income",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1360454400,
          "isVerified": false,
          "tags": Array [],
          "title": "Savings",
        },
        "postings": Array [
          Object {
            "account": "Assets:Bank",
            "amount": "100",
            "currency": "€",
            "tags": Array [],
          },
          Object {
            "account": "Assets:Bank:Savings",
            "amount": "42",
            "currency": "€",
            "tags": Array [],
          },
          Object {
            "account": "Income:Job",
            "amount": "-142",
            "tags": Array [],
          },
        ],
        "uuid": "uuid 0",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer appends transaction 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Bank": Account {
        "balance": "496.95",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "500",
        "debits": "-3.05",
        "name": "Bank",
        "nbChildrenTransactions": 0,
        "nbTransactions": 2,
        "parent": "ROOT",
      },
      "Expenses": Account {
        "balance": "3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "3.05",
        "debits": "0",
        "name": "Expenses",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Job": Account {
        "balance": "-500",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-500",
        "name": "Job",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Bank",
          "Expenses",
          "Job",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1360281600,
          "isVerified": false,
          "tags": Array [],
          "title": "Bread",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "-3.05",
            "comment": "Comment",
            "currency": "$",
            "tag": "!",
            "tags": Array [],
          },
          Object {
            "account": "Expenses",
            "amount": "3.05",
            "tags": Array [
              "HOLIDAYS",
              "SUMMER",
            ],
          },
        ],
        "uuid": "uuid 0",
      },
      "uuid 1": Object {
        "header": Object {
          "date": 1360454400,
          "isVerified": true,
          "tags": Array [],
          "title": "Salary",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "500",
            "currency": "€",
            "tags": Array [],
          },
          Object {
            "account": "Job",
            "amount": "-500",
            "tags": Array [],
          },
        ],
        "uuid": "uuid 1",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer clears transactions 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer closes a tab 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {},
  },
}
`;

exports[`rootReducer closes tab if no more accounts 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer computes invalid transaction 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [
      "uuid 0",
    ],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1520080726,
          "isVerified": false,
          "tags": Array [],
          "title": "Titre",
        },
        "postings": Array [],
        "uuid": "uuid 0",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer deletes transaction 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer deletes transaction with nested accounts 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer does not close an unknown tab 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer does not open an existing tab 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
      "uuid 0": Object {
        "filters": Object {
          "input": "",
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "uuid 0",
        "isClosable": true,
        "selectedAccounts": Array [
          "Account",
        ],
      },
    },
  },
}
`;

exports[`rootReducer does not select new accounts if one is already selected 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Bank": Account {
        "balance": "496.95",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "500",
        "debits": "-3.05",
        "name": "Bank",
        "nbChildrenTransactions": 0,
        "nbTransactions": 2,
        "parent": "ROOT",
      },
      "Expenses": Account {
        "balance": "3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "3.05",
        "debits": "0",
        "name": "Expenses",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Job": Account {
        "balance": "-500",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-500",
        "name": "Job",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Bank",
          "Expenses",
          "Job",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1360281600,
          "isVerified": false,
          "tags": Array [],
          "title": "Bread",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "-3.05",
            "comment": "Comment",
            "currency": "$",
            "tag": "!",
            "tags": Array [],
          },
          Object {
            "account": "Expenses",
            "amount": "3.05",
            "tags": Array [
              "HOLIDAYS",
              "SUMMER",
            ],
          },
        ],
        "uuid": "uuid 0",
      },
      "uuid 1": Object {
        "header": Object {
          "date": 1360454400,
          "isVerified": true,
          "tags": Array [],
          "title": "Salary",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "500",
            "currency": "€",
            "tags": Array [],
          },
          Object {
            "account": "Job",
            "amount": "-500",
            "tags": Array [],
          },
        ],
        "uuid": "uuid 1",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer has empty state at startup 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer keeps edited transaction not deleted 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Bank": Account {
        "balance": "-3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-3.05",
        "name": "Bank",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Expenses": Account {
        "balance": "3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "3.05",
        "debits": "0",
        "name": "Expenses",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Bank",
          "Expenses",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1360281600,
          "isVerified": false,
          "tags": Array [],
          "title": "Bread",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "-3.05",
            "comment": "Comment",
            "currency": "$",
            "tag": "!",
            "tags": Array [],
          },
          Object {
            "account": "Expenses",
            "amount": "3.05",
            "tags": Array [
              "HOLIDAYS",
              "SUMMER",
            ],
          },
        ],
        "uuid": "uuid 0",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": Object {
          "header": Object {
            "date": 1360281600,
            "isVerified": false,
            "tags": Array [],
            "title": "Bread",
          },
          "postings": Array [
            Object {
              "account": "Bank",
              "amount": "-3.05",
              "comment": "Comment",
              "currency": "$",
              "tag": "!",
              "tags": Array [],
            },
            Object {
              "account": "Expenses",
              "amount": "3.05",
              "tags": Array [
                "HOLIDAYS",
                "SUMMER",
              ],
            },
          ],
          "uuid": "uuid 0",
        },
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer opens a tab 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
      "uuid 0": Object {
        "filters": Object {
          "input": "",
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "uuid 0",
        "isClosable": true,
        "selectedAccounts": Array [
          "Account:Sub account",
        ],
      },
    },
  },
}
`;

exports[`rootReducer replaces transaction 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Bank": Account {
        "balance": "500",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "500",
        "debits": "0",
        "name": "Bank",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Job": Account {
        "balance": "-500",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-500",
        "name": "Job",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Bank",
          "Job",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 1": Object {
        "header": Object {
          "date": 1360454400,
          "isVerified": true,
          "tags": Array [],
          "title": "Salary",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "500",
            "currency": "€",
            "tags": Array [],
          },
          Object {
            "account": "Job",
            "amount": "-500",
            "tags": Array [],
          },
        ],
        "uuid": "uuid 1",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer saves current input 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "my input",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer saves max date 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": 1520080726,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer saves min date 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": 1520080726,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer saves show invalid preference 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": true,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer sets edited transaction 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Bank": Account {
        "balance": "-3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-3.05",
        "name": "Bank",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Expenses": Account {
        "balance": "3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "3.05",
        "debits": "0",
        "name": "Expenses",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Bank",
          "Expenses",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1360281600,
          "isVerified": false,
          "tags": Array [],
          "title": "Bread",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "-3.05",
            "comment": "Comment",
            "currency": "$",
            "tag": "!",
            "tags": Array [],
          },
          Object {
            "account": "Expenses",
            "amount": "3.05",
            "tags": Array [
              "HOLIDAYS",
              "SUMMER",
            ],
          },
        ],
        "uuid": "uuid 0",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": Object {
          "header": Object {
            "date": 1360281600,
            "isVerified": false,
            "tags": Array [],
            "title": "Bread",
          },
          "postings": Array [
            Object {
              "account": "Bank",
              "amount": "-3.05",
              "comment": "Comment",
              "currency": "$",
              "tag": "!",
              "tags": Array [],
            },
            Object {
              "account": "Expenses",
              "amount": "3.05",
              "tags": Array [
                "HOLIDAYS",
                "SUMMER",
              ],
            },
          ],
          "uuid": "uuid 0",
        },
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer sets loading indicator 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": true,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer unselects edited transaction if deleted 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer unsets edited transaction 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Bank": Account {
        "balance": "-3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-3.05",
        "name": "Bank",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Expenses": Account {
        "balance": "3.05",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "3.05",
        "debits": "0",
        "name": "Expenses",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Bank",
          "Expenses",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1360281600,
          "isVerified": false,
          "tags": Array [],
          "title": "Bread",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "-3.05",
            "comment": "Comment",
            "currency": "$",
            "tag": "!",
            "tags": Array [],
          },
          Object {
            "account": "Expenses",
            "amount": "3.05",
            "tags": Array [
              "HOLIDAYS",
              "SUMMER",
            ],
          },
        ],
        "uuid": "uuid 0",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer unsets loading indicator 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "ROOT_ACCOUNT": Account {
        "balance": "0",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [],
  },
  "entities": Object {
    "transactions": Object {},
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;

exports[`rootReducer updates transaction 1`] = `
Object {
  "computed": Object {
    "accounts": Object {
      "Bank": Account {
        "balance": "500",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "500",
        "debits": "0",
        "name": "Bank",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "Job": Account {
        "balance": "-500",
        "children": Array [],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "-500",
        "name": "Job",
        "nbChildrenTransactions": 0,
        "nbTransactions": 1,
        "parent": "ROOT",
      },
      "ROOT": Account {
        "balance": "0",
        "children": Array [
          "Bank",
          "Job",
        ],
        "childrenBalance": "0",
        "childrenCredits": "0",
        "childrenDebits": "0",
        "credits": "0",
        "debits": "0",
        "name": "ROOT",
        "nbChildrenTransactions": 0,
        "nbTransactions": 0,
      },
    },
    "invalidTransactions": Array [
      "uuid 1",
    ],
  },
  "entities": Object {
    "transactions": Object {
      "uuid 0": Object {
        "header": Object {
          "date": 1360454400,
          "isVerified": true,
          "tags": Array [],
          "title": "Salary",
        },
        "postings": Array [
          Object {
            "account": "Bank",
            "amount": "500",
            "currency": "€",
            "tags": Array [],
          },
          Object {
            "account": "Job",
            "amount": "-500",
            "tags": Array [],
          },
        ],
        "uuid": "uuid 0",
      },
      "uuid 1": Object {
        "header": Object {
          "date": 1520080726,
          "isVerified": false,
          "tags": Array [],
          "title": "Titre",
        },
        "postings": Array [],
        "uuid": "uuid 1",
      },
    },
  },
  "ui": Object {
    "isLeftMenuOpen": false,
    "isLoading": false,
    "persistedAt": undefined,
    "tabs": Object {
      "ROOT": Object {
        "editedTransaction": undefined,
        "filters": Object {
          "input": "",
          "maxDate": undefined,
          "minDate": undefined,
          "showOnlyInvalid": false,
          "tags": Array [],
        },
        "id": "ROOT",
        "isClosable": false,
        "selectedAccounts": Array [
          "ROOT",
        ],
      },
    },
  },
}
`;
